[package]
name = "rusk"
version = "0.1.1"
authors = ["YAMASHINA Hio <hio@hio.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
combine = "4.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
