[package]
name = "rusk"
version = "0.1.10"
authors = ["YAMASHINA Hio <hio@hio.jp>"]
edition = "2018"
description = "a Specification Language"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hio/rusk"
repository = "https://github.com/hio/rusk"
documentation = "https://docs.rs/crate/rusk"
include = ["src/**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
